--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,20 @@
---- #YAML:1.0
+---
 name: Alzabo-GUI-Mason
-version: 0.1
+version: 0.11
 author:
-  - ~
+  - 'Dave Rolsky <autarch@urth.org>'
 abstract: A GUI for Alzabo using Mason
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
-  HTML::Mason: 0.896
-  HTTP::BrowserDetect: 0
+  HTML::Mason: 1.1
+  URI::FromHash: 0
 provides:
   Alzabo::GUI::Mason:
     file: lib/Alzabo/GUI/Mason.pm
-    version: 0.1
-generated_by: Module::Build version 0.23
+    version: 0.11
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
